telecom-bretagne/javacompiler/SecondPhase/tests/Good/testArrayInit2.java
class H {
	

	H(){
		int[] x = new int[2] ;

	}

}