telecom-bretagne/javacompiler/SecondPhase/tests/Fail/testArrayInitFail.java
class H {
	

	H(){
		int[] x = new int[1]{1} ;

	}

}